11.2:
	improve inter/{UPPER,LOWER} (include mapping in SpecialCasing.txt)
	add inter/CASEFOLD (C/F in CASEFOLD.txt)
	Update inter/SCORE, inter/SCORE_TRAIN, with manpages.
	Improve worst-case performance for inter/_NF-ORDER
	Unify map file structure on all platform

11.1:
	Correct algorithm for unicode normalization

11.0:
	add man page for inter/AMBIGUOUS-PAD and inter/AMBIGUOUS-UNPAD
	add inter/{NFC,NFD,NFKC,NFKD} #UnicodeData
	improve inter/{UPPER,LOWER} #UnicodeData
	add inter/PASS
	add unified counter interface
	replace inter/ERROR with newly added inter/COUNT
	replace inter/SPLIT with newly added inter/INSERT
	support data list for codec argument

10.0:
	support "codec#key&key=value" style argument
	replace from/3f and from/sub with from/any
	replace to/3f with to/any
	replace to/UNICODE and to/ANSI-CONTROL with alias to to/PASS#MARK&FOR={UNICODE,1,ANSI,1B}
	replace from/SKIP with alias to from/PASS#UNMARK
	replace to/ASCII-ESCAPE-UNICODE with alias to ESCAPE#...
	replace to/ASCII-HEX-HTML-ENTITY with alias to ESCAPE#...
	add to/ASCII-DEC-HTML-ENTITY alias to ESCAPE#...
	deprecate bsdconv_duplicate()
	add bsdconv-man and some manpages
	add document
	API change for bsdconv_{insert,replace}_{phase,codec}

9.1:
	bash completion script (buggy)
	extend from/ESCAPE to support \uUUUU \xXX \OOO
	add bsdconv -l
	chown/chmod for created file
	use system-provided PATH_MAX (thanks to PkmX)
	sync data from project chvar
	add EBCDIC codecs: 37, 930, 933, 935, 937, 939 (as roytam1's request)
	add new state status: SUBMATCH_SUBROUTINE
	fix line separator issue on windows (thanks to roytam1)
	improve bsdconv_mktable, significantly reduce some output file size
	add testsuite

9.0:
	fix for MinGW
	export bsdconv_malloc/bsdconv_free
	add {from,to}/CCCII (as Thomas-Tsai's request)
	add inter/ZH-STRINGS
	internal API changes for use of bsdconv_ctl in wrappers
	bugfixes

8.0:
	add flush function into callback interface