@@ -62,6 +62,7 @@ TODO_CODECS_BASIC+=inter/MAC
 TODO_CODECS_BASIC+=inter/NOBOM
 TODO_CODECS_BASIC+=inter/NL2BR
 TODO_CODECS_BASIC+=inter/PASS
+TODO_CODECS_BASIC+=inter/REPLACE
 TODO_CODECS_BASIC+=inter/SCORE
 TODO_CODECS_BASIC+=inter/SCORE-TRAIN
 TODO_CODECS_BASIC+=inter/TRIM-WIDTH
