@@ -1,3 +1,2 @@
 update score table
 to/ASCII-TRANS
-nobom => remove
