@@ -3,3 +3,4 @@ NFKD	_NFKD:_NF-HANGUL-DECOMPOSITION:_NF-ORDER
 NFC		NFD:_NFC:_NF-HANGUL-COMPOSITION
 NFKC	NFKD:_NFC:_NF-HANGUL-COMPOSITION
 SPLIT	INSERT#AFTER=002C
+NOBOM	REPLACE#01FEFF
